done all tasked
# Conflicts:
#	src/main/java/com/projectecommerce/advice_controller/GlobalHandleException.java
#	src/main/java/com/projectecommerce/controller/AuthController.java
#	src/main/java/com/projectecommerce/model/entity/User.java
#	src/main/java/com/projectecommerce/model/enums/ERole.java
#	src/main/java/com/projectecommerce/security/jwt/JWTAuthFilter.java
#	src/main/java/com/projectecommerce/security/principal/CustomUserDetails.java
#	src/main/java/com/projectecommerce/service/auth/AuthServiceImpl.java