@@ -1,5 +1,7 @@
 package com.projectecommerce.service.auth;
 
+import com.projectecommerce.model.entity.VerificationToken;
+import com.projectecommerce.repository.VerificationTokenRepository;
 import com.projectecommerce.security.jwt.JWTProvider;
 import com.projectecommerce.mapper.UserMapper;
 import com.projectecommerce.model.dto.request.*;
@@ -10,6 +12,7 @@ import com.projectecommerce.model.enums.ERole;
 import com.projectecommerce.repository.RoleRepository;
 import com.projectecommerce.repository.UserRepository;
 import com.projectecommerce.service.cloudinary.CloudinaryService;
+import com.projectecommerce.service.email.EmailService;
 import com.projectecommerce.utils.exception.ConflictException;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -31,41 +34,44 @@ public class AuthServiceImpl implements AuthService {
     private final JWTProvider jwtTokenProvider;
     private final AuthenticationManager authenticationManager;
     private final CloudinaryService cloudinaryService;
+    private final VerificationTokenRepository verificationTokenRepository;
+    private final EmailService emailService;
 
     @Override
-    @Transactional
     public void register(RegisterDTO dto) {
-        if (userRepository.existsByUsername(dto.getUsername()))
-            throw new IllegalArgumentException("Username đã tồn tại");
-
-        if (userRepository.existsByEmail(dto.getEmail()))
-            throw new IllegalArgumentException("Email đã tồn tại");
-
-        if (userRepository.existsByPhone(dto.getPhone()))
-            throw new IllegalArgumentException("Số điện thoại đã tồn tại");
-
         Role role = roleRepository.findByName(ERole.CUSTOMER)
-                .orElseThrow(() -> new IllegalCallerException("Vai trò không hợp lệ"));
+                .orElseThrow(() -> new ConflictException("Không tìm thấy role"));
 
         User user = User.builder()
                 .username(dto.getUsername())
-                .password(passwordEncoder.encode(dto.getPassword()))
                 .email(dto.getEmail())
+                .password(passwordEncoder.encode(dto.getPassword()))
                 .fullName(dto.getFullName())
-                .address(dto.getAddress())
                 .phone(dto.getPhone())
-                .roles(Set.of(role))
-                .avatar(null)
-                .status(true)
+                .roles(Collections.singleton(role))
+                .address(dto.getAddress())
                 .isVerify(false)
-                .isLogin(false)
-                .isDeleted(false)
+                .status(true)
                 .createAt(LocalDate.now())
-                .updateAt(LocalDate.now())
-                .deletedAt(null)
                 .build();
-
         userRepository.save(user);
+
+        String otp = generateOTP();
+        VerificationToken token = VerificationToken.builder()
+                .token(otp)
+                .user(user)
+                .expiryDate(LocalDateTime.now().plusMinutes(10))
+                .build();
+        verificationTokenRepository.save(token);
+
+        emailService.sendVerificationEmail(user, otp);
+    }
+
+
+    private String generateOTP() {
+        Random random = new Random();
+        int otp = 100_000 + random.nextInt(900_000);
+        return String.valueOf(otp);
     }
 
     @Override
@@ -76,6 +82,9 @@ public class AuthServiceImpl implements AuthService {
 
         User user = userRepository.findByUsername(dto.getUsername())
                 .orElseThrow(() -> new ConflictException("Không tìm thấy người dùng"));
+        if(!user.isVerify()){
+            throw new ConflictException("Tài khoản chưa được xác thực");
+        }
 
         if(user.isDeleted()){
             throw new IllegalArgumentException("Người dùng đã bị xoá");
@@ -131,16 +140,28 @@ public class AuthServiceImpl implements AuthService {
 
 
     @Override
-    public void verify(User user) {
+    public void verify(LoginDTO loginDTO, String token) {
+        User user = userRepository
+                .findByUsername(loginDTO.getUsername())
+                .orElseThrow(() -> new ConflictException("Tài khoản và mật khẩu không khớp"));
+        VerificationToken verificationToken = verificationTokenRepository.findByUser(user)
+                .orElseThrow(() -> new ConflictException("Không tìm thấy token xác thực"));
+
+        if (!verificationToken.getToken().equals(token)) {
+            throw new ConflictException("Token không hợp lệ");
+        }
+
+        if (verificationToken.getExpiryDate().isBefore(LocalDateTime.now())) {
+            throw new ConflictException("Token đã hết hạn");
+        }
+
         if (user.isVerify()) throw new ConflictException("Tài khoản đã xác thực rồi");
 
-        User freshUser = userRepository.findById(user.getId())
-                .orElseThrow(() -> new ConflictException("Không tìm thấy người dùng"));
-
-        freshUser.setVerify(true);
-        freshUser.setUpdateAt(LocalDate.now());
-        userRepository.save(freshUser);
+        user.setVerify(true);
+        userRepository.save(user);
+        verificationTokenRepository.deleteByUser(user);
     }
+
 
     @Override
     public UserSummaryDTO getProfile(User user) {
@@ -170,5 +191,14 @@ public class AuthServiceImpl implements AuthService {
         user.setPhone(dto.getPhone());
         user.setUpdateAt(LocalDate.now());
         userRepository.save(user);
+    }
+
+    public void validateLoginRequest(String username, String password) {
+        if (username == null || username.trim().isEmpty()) {
+            throw new IllegalArgumentException("Username cannot be empty");
+        }
+        if (password == null || password.trim().isEmpty()) {
+            throw new IllegalArgumentException("Password cannot be empty");
+        }
     }
 }
